--- a/Web/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Web/Views/Shared/_Layout.cshtml
@@ -1,34 +1,41 @@
 ﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
-
+@section Styles {
+    <link rel="stylesheet" href="~/css/layout/layout.css" asp-append-version="true" />
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Web</title>
+    <title>@ViewData["Title"] - PULib</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Web.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    @RenderSection("Styles", required: false)
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark border-bottom">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Web</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand fw-bold text-uppercase" asp-area="" asp-controller="Home" asp-action="Index">PULib</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Book" asp-action="Books">Books</a> <!-- New Books Tab -->
+                            <a class="nav-link text-light" asp-controller="Book" asp-action="Books">Books</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Contact" asp-action="Index">Contact us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
@@ -38,35 +45,36 @@
                             var userRole = HttpContextAccessor.HttpContext.Session.GetInt32("UserRole");
 
                             <li class="nav-item">
-                                <span class="nav-link text-dark">Welcome, @loggedUserName</span>
+                                <span class="nav-link text-light">Welcome, @loggedUserName</span>
                             </li>
 
                             @if (userRole == 1)
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Admin" asp-action="Index">Dashboard</a>
+                                    <a class="nav-link text-light" asp-controller="Admin" asp-action="Index">Dashboard</a>
                                 </li>
                             }
                             @if (userRole == 2)
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Admin" asp-action="Index">Dashboard</a>
+                                    <a class="nav-link text-light" asp-controller="Admin" asp-action="Index">Dashboard</a>
                                 </li>
                             }
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Auth" asp-action="ChangeProfile">Change Profile</a>
+                                <a class="nav-link text-light" asp-controller="Auth" asp-action="ChangeProfile">Change Profile</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Loan" asp-action="CurrentUserLoans">My Loans</a>
+                                <a class="nav-link text-light" asp-controller="Loan" asp-action="CurrentUserLoans">My Loans</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Auth" asp-action="Logout">Logout</a>
+                                <a class="nav-link text-light" asp-controller="Auth" asp-action="Logout">Logout</a>
                             </li>
+
                         }
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Auth" asp-action="Login">Login</a>
+                                <a class="nav-link text-light" asp-controller="Auth" asp-action="Login">Login</a>
                             </li>
                         }
                     </ul>
@@ -75,16 +83,23 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-1">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="bg-dark text-light py-4">
+        <div class="container-fluid d-flex justify-content-between align-items-center flex-wrap">
+            <p class="mb-0">© 2024 - <span class="fw-bold">Web</span>. All Rights Reserved.</p>
+            <ul class="list-unstyled d-flex gap-4 mb-0">
+                <li><a class="text-light hover-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy Policy</a></li>
+                <li><a class="text-light hover-link" asp-area="" asp-controller="Contact" asp-action="Index">Contact us</a></li>
+            </ul>
         </div>
     </footer>
+
+
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
