--- a/Web/Web/Views/Auth/UserList.cshtml
+++ b/Web/Web/Views/Auth/UserList.cshtml
@@ -28,6 +28,12 @@
     <button type="submit" class="btn btn-primary">Search</button>
 </form>
 
+<div class="mt-3">
+    <a asp-controller="Admin" asp-action="RegisterUser" class="btn btn-primary">
+        Register New User
+    </a>
+</div>
+
 <table class="table">
     <thead>
         <tr>
