--- a/Web/Web/Views/Book/Index.cshtml
+++ b/Web/Web/Views/Book/Index.cshtml
@@ -23,16 +23,16 @@
 
 <h2>All Books</h2>
 
+<form method="get" class="form-inline mb-3">
+    <input type="text" name="search" class="form-control mr-sm-2" placeholder="Search by title, ISBN, or publisher" value="@ContextAccessor.HttpContext.Request.Query["search"]">
+    <button type="submit" class="btn btn-primary">Search</button>
+</form>
+
 <div class="mt-3">
     <a asp-controller="Book" asp-action="AddBook" class="btn btn-primary">
         Add New Book
     </a>
 </div>
-
-<form method="get" class="form-inline mb-3">
-    <input type="text" name="search" class="form-control mr-sm-2" placeholder="Search by title, ISBN, or publisher" value="@ContextAccessor.HttpContext.Request.Query["search"]">
-    <button type="submit" class="btn btn-primary">Search</button>
-</form>
 
 @if (TempData["Success"] != null)
 {
@@ -56,13 +56,13 @@
                 <td>@book.ISBN</td>
                 <td>@book.Publisher?.Name</td>
                 <td>
+                    <form asp-action="EditBook" asp-controller="Book" method="get" class="d-inline">
+                        <input type="hidden" name="id" value="@book.Id" />
+                        <button type="submit" class="btn btn-warning btn-sm">Edit</button>
+                    </form>
                     <form asp-action="DeleteBook" asp-controller="Book" method="post" class="d-inline">
                         <input type="hidden" name="id" value="@book.Id" />
                         <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                    </form>
-                    <form asp-action="EditBook" asp-controller="Book" method="get" class="d-inline">
-                        <input type="hidden" name="id" value="@book.Id" />
-                        <button type="submit" class="btn btn-danger btn-sm">Edit</button>
                     </form>
                 </td>
             </tr>
